force-app/main/default/objects/MultPEFImportSettings__mdt/MultPEFImportSettings__mdt.object-meta.xml
<CustomObject>
    <label>MultPEFImportSettings</label>
    <pluralLabel>MultPEFImportSettings</pluralLabel>
</CustomObject>