force-app/main/default/objects/MultPEFImportSettings__mdt/fields/fieldDelimiter__c.field-meta.xml
<CustomField>
    <fullName>fieldDelimiter__c</fullName>
    <label>fieldDelimiter</label>
    <length>50</length>
    <type>Text</type>
</CustomField>