force-app/main/default/objects/MultPEFImportSettings__mdt/fields/ImportIdPos__c.field-meta.xml
<CustomField>
    <fullName>ImportIdPos__c</fullName>
    <label>ImportIdPos</label>
    <length>100</length>
    <type>Text</type>
</CustomField>