force-app/main/default/objects/MultPEFImportSettings__mdt/fields/lineDelimiter__c.field-meta.xml
<CustomField>
    <fullName>lineDelimiter__c</fullName>
    <label>lineDelimiter</label>
    <length>100</length>
    <type>Text</type>
</CustomField>