force-app/main/default/objects/MultPEFImportSettings__mdt/fields/ReportNumberPos__c.field-meta.xml
<CustomField>
    <fullName>ReportNumberPos__c</fullName>
    <label>ReportNumberPos</label>
    <length>100</length>
    <type>Text</type>
</CustomField>