force-app/main/default/objects/MultPEFImportSettings__mdt/fields/RTName__c.field-meta.xml
<CustomField>
    <fullName>RTName__c</fullName>
    <label>RTName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>